--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@zhgu/render",
+  "name": "@zhgu/editor",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,12 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/lodash-es": "^4.17.12",
+    "@zhgu/data": "workspace:*",
+    "@zhgu/render": "workspace:*",
     "@zhgu/type": "workspace:*",
-    "@zhgu/data": "workspace:*"
+    "gl-matrix": "^3.4.3",
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
-    "@types/node": "^22.15.21",
     "typescript": "~5.8.3",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "@types/dat.gui": "^0.7.13",
+    "dat.gui": "^0.7.9"
   }
 }
