--- a/package.json
+++ b/package.json
@@ -4,16 +4,32 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "format": "prettier --write ."
+    "format": "prettier --write './**/*.{ts,tsx}'",
+    "lint:fix": "eslint . --ext .ts,.tsx --cache --color --fix",
+    "lint:check": "eslint . --ext .ts,.tsx --cache --color",
+    "prepare": "husky",
+    "lint-staged": "lint-staged"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.6.1",
   "devDependencies": {
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
+    "@eslint/js": "^9.28.0",
     "@types/node": "^22.15.21",
+    "eslint": "^9.28.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.2.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.0",
+    "prettier": "^3.5.3",
     "typescript": "~5.8.3",
-    "vite": "^6.3.5",
-    "prettier": "^3.5.3"
+    "typescript-eslint": "^8.33.1",
+    "vite": "^6.3.5"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": ["eslint --fix", "prettier --write"]
   }
 }
