--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "format": "prettier --write './**/*.{ts,tsx}'",
     "lint:fix": "eslint . --ext .ts,.tsx --cache --color --fix",
     "lint:check": "eslint . --ext .ts,.tsx --cache --color",
+    "lint:error": "eslint . --ext .ts,.tsx --cache --color --quiet",
     "prepare": "husky",
     "lint-staged": "lint-staged"
   },
