--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -12,13 +12,14 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
-    "@types/lodash-es": "^4.17.12",
     "@zhgu/data": "workspace:*",
     "@zhgu/render": "workspace:*",
     "@zhgu/type": "workspace:*",
     "autobind-decorator": "^2.4.0",
     "bezier-easing": "^2.1.0",
-    "eventemitter3": "^5.0.1",
+    "eventemitter3": "^5.0.1"
+  },
+  "peerDependencies": {
     "gl-matrix": "^3.4.3",
     "lodash-es": "^4.17.21"
   },
@@ -26,6 +27,7 @@
     "@types/dat.gui": "^0.7.13",
     "dat.gui": "^0.7.9",
     "typescript": "~5.8.3",
+    "@types/lodash-es": "^4.17.12",
     "vite": "^6.3.5"
   }
 }
