--- a/packages/render/package.json
+++ b/packages/render/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@zhgu/data": "workspace:*",
-    "@zhgu/type": "workspace:*",
+    "@zhgu/type": "workspace:*"
+  },
+  "peerDependencies": {
     "gl-matrix": "^3.4.3",
     "pixi.js": "^8.9.2"
   },
