--- a/packages/editor/tsconfig.json
+++ b/packages/editor/tsconfig.json
@@ -1,4 +1,8 @@
 {
   "extends": "../../tsconfig.json",
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
