--- a/packages/render/tsconfig.json
+++ b/packages/render/tsconfig.json
@@ -2,5 +2,10 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "types": ["jest"]
-  }
+  },
+  "include": ["src"],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
