--- a/app/zhgu-editor/package.json
+++ b/app/zhgu-editor/package.json
@@ -16,12 +16,14 @@
     "@zhgu/type": "workspace:*",
     "lucide-react": "^0.513.0",
     "react": "^19.1.0",
+    "react-color": "^2.19.3",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.8",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@types/react": "^19.1.6",
+    "@types/react-color": "^3.0.13",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.5.2",
     "typescript": "~5.8.3",
