feat: 完成颜色和描边修改的功能2

--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
   "name": "zhgu-monorepo",
   "version": "1.0.0",
-  "description": "",
+  "description": "Modern graphic design editor monorepo built with React + TypeScript + Canvas API",
   "main": "index.js",
   "scripts": {
-    "format": "prettier --write './**/*.{ts,tsx}'",
+    "dev": "pnpm --filter zhgu-editor dev",
+    "build": "pnpm --filter zhgu-editor build",
+    "preview": "pnpm --filter zhgu-editor preview",
+    "dev:editor": "pnpm --filter zhgu-editor dev",
+    "build:editor": "pnpm --filter zhgu-editor build",
+    "dev:core": "pnpm --filter @zhgu/editor dev",
+    "build:core": "pnpm --filter @zhgu/editor build",
+    "build:all": "pnpm -r build",
+    "clean": "pnpm -r clean && rm -rf node_modules",
+    "format": "prettier --write './**/*.{ts,tsx,js,jsx,md,json}'",
     "lint:fix": "eslint . --ext .ts,.tsx,.js,.jsx --cache --color --fix",
     "lint:check": "eslint . --ext .ts,.tsx,.js,.jsx --cache --color",
     "lint:error": "eslint . --ext .ts,.tsx,.js,.jsx --cache --color --quiet",
+    "type:check": "pnpm -r type:check",
     "prepare": "husky",
-    "lint-staged": "lint-staged",
-    "dev:editor": "pnpm --filter zhgu-editor dev",
-    "build:editor": "pnpm --filter zhgu-editor build"
+    "lint-staged": "lint-staged"
   },
   "keywords": [],
   "author": "",
