feat: 修改一下render层的配置

--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
   "scripts": {
     "dev": "pnpm --filter zhgu-editor dev",
     "build": "pnpm --filter zhgu-editor build",
-    "preview": "pnpm --filter zhgu-editor preview",
-    "dev:editor": "pnpm --filter zhgu-editor dev",
-    "build:editor": "pnpm --filter zhgu-editor build",
-    "dev:core": "pnpm --filter @zhgu/editor dev",
-    "build:core": "pnpm --filter @zhgu/editor build",
+    "dev:@zhgu/editor": "pnpm --filter @zhgu/editor dev",
+    "dev:@zhgu/ui": "pnpm --filter @zhgu/ui dev",
+    "dev:@zhgu/render": "pnpm --filter @zhgu/render dev",
     "build:all": "pnpm -r build",
     "clean": "pnpm -r clean && rm -rf node_modules",
     "format": "prettier --write './**/*.{ts,tsx,jsx,md,json}'",
