--- a/packages/render/package.json
+++ b/packages/render/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "src/index.ts",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite example" ,
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
